tests/invalid/comprehension_range_zero_args/main.py
def main() -> None:
    xs: list[int] = [i for i in range()]
